--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     </header>
 
     <main>
-        <h1 class="titulo-home">Bienvenidos a la primer tienda de helmets de Argentina</h1>
+        <h1 class="titulo-home">Bienvenidos a la primera tienda de helmets de Argentina</h1>
         <p class="parrafo-home">
             Explora nuestra coleccion exclusiva de cascos de futbol americano de la
             NFL y muchas cosas mas...
@@ -79,5 +79,6 @@
         <p>&copy; 2025 Tienda de Federico. Todos los derechos reservados.</p>
     </footer>
 </body>
+
 
 </html>
